# llamate

./: .gitignore  Dockerfile  README.md  entrypoint.sh  install.sh  llamate.spec  pyproject.toml
.github/workflows/: docker-image.yml  python-package.yml
llamate/: __init__.py  __main__.py  constants.py
llamate/cli/: __init__.py  cli.py
llamate/cli/commands/: __init__.py  config.py  init.py  model.py  run.py  serve.py  update.py
llamate/core/: __init__.py  config.py  download.py  model.py  platform.py  version.py
llamate/data/: __init__.py  model_aliases.py
llamate/services/: __init__.py  aliases.py  llama_server.py  llama_swap.py
llamate/utils/: __init__.py  archive.py  exceptions.py  file_utils.py  gpu.py  text_utils.py
tests/: __init__.py  conftest.py  pytest.ini  test_config_monitoring.py
tests/cli/: __init__.py  test_cli.py  test_cli_main.py
tests/cli/commands/: test_init.py  test_model.py  test_monitor.py  test_run.py  test_serve.py
tests/core/: __init__.py  test_config.py  test_download.py  test_model.py  test_platform.py
tests/data/: test_model_aliases.py
tests/services/: test_aliases.py  test_llama_server.py  test_llama_swap.py
tests/test_data/: config.json  read_test.txt
tests/utils/: __init__.py  test_archive.py  test_gpu.py  test_utils.py
